Fix delay on auto-brush stroke with randomness

KisAutoBrush used to initialize brushTipImage() and image() with
a full-size preview image, which could cause huge delay for big
brushes with randomness enabled.

This patch disables initialization of brushTipImage() for auto-brushes
(it is not used for them anyway).

BUG:446663